<?xml version="1.0"?>
<package format="2">
  <name>ros_bno055</name>
  <version>0.0.0</version>
  <description>A ROS package containing a Linux hardware driver for Adafruit's BNO055 9-DoF Orientation Sensor Breakout and a ROS node wrapper that exposes the sensor driver to the ROS ecosystem.</description>

  <maintainer email="joeyyang.ai@gmail.com">Joey Yang</maintainer>
  <maintainer email="caoy15@mcmaster.ca">Henry Cao</maintainer>
  <author email="joeyyang.ai@gmail.com">Joey Yang</author>
  <author email="caoy15@mcmaster.ca">Henry Cao</author>

  <license>BSD</license>
  
  <url type="repository">https://github.com/joeyjyyang/bno055_driver</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
 
  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
